syntax = "proto3";
package proto;
option go_package = "./grpcModels";

service AppService {
  rpc AppPing(AppPingRequest) returns (AppPingResponse) {}
  rpc UserPermission(UserPermissionRequest) returns (UserPermissionResponse) {}
  rpc MasternodeGraph(MasternodeGraphRequest) returns (MasternodeGraphResponse) {}
  rpc StakeGraph(StakeGraphRequest) returns (StakeGraphResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
}

message AppPingRequest {
  uint32 code = 1;
}

message AppPingResponse {
  uint32 code = 1;
}

message UserPermissionRequest {
  uint32 code = 1;
}

message UserPermissionResponse {
  bool mn_permission = 1;
  bool stealth_permission = 2;
}

message MasternodeGraphRequest {
    uint32 idCoin = 1;
    uint32 type = 2;
    string datetime = 3;
}

message MasternodeGraphResponse {

  message Rewards {
    uint32 hour = 1;
    double amount = 2;
    string day = 3;
  }

  bool hasError = 1;
  repeated Rewards rewards = 2;
  string status = 3;
}

message StakeGraphRequest {
  uint32 idCoin = 1;
  uint32 type = 2;
  string datetime = 3;
}

message StakeGraphResponse {

  message Rewards {
    uint32 hour = 1;
    double amount = 2;
    string day = 3;
  }

  bool hasError = 1;
  repeated Rewards rewards = 2;
  string status = 3;
}

message RefreshTokenRequest {
  string token = 1;
}

message RefreshTokenResponse {
  string token = 1;
  string refresh_token = 2;
}